test/src/e2e_vm_tests/test_programs/should_fail/script_calls_impure/src/main.sw
script;

// In a script, there can be no impurity since storage is only available in contracts.
#[storage(read)]
fn main() {}
